--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    
+
 </head>
 
 <body>
@@ -285,6 +287,8 @@
     <!-- Metis Menu Plugin JavaScript -->
     <script src="node_modules/metisMenu/dist/metisMenu.min.js"></script>   
 
+    <!-- Custom JavaScript -->
+    <script src="dist/js/init.js"></script>
 </body>
 
 </html>
